fix max-width sizing, overflow of images

--- a/assets/scss/_general.scss
+++ b/assets/scss/_general.scss
@@ -38,7 +38,7 @@ h1 {
 
 .wrapper {
   display: grid;
-  grid-template-columns: 1fr min(60ch, calc(100% - 64px)) 1fr;
+  grid-template-columns: 1fr min(64rem, calc(100% - 64px)) 1fr;
   grid-column-gap: 32px;
   & > * {
     grid-column: 2;
