--- a/assets/scss/components/_app-cta.scss
+++ b/assets/scss/components/_app-cta.scss
@@ -39,7 +39,6 @@
 .cta--main {
   position: absolute;
   top: 60%;
-  left: 2rem;
   @media screen and (min-width: $lg) {
     top: 40%;
     left: 0;
