--- a/assets/scss/components/_app-nav.scss
+++ b/assets/scss/components/_app-nav.scss
@@ -1,5 +1,5 @@
 .landing-nav {
-  padding: 2rem;
+  padding: 2rem 0;
   margin-bottom: 8rem;
   @media screen and (min-width: $lg) {
     padding: 6rem 0 0 0;
