--- a/assets/scss/components/_app-section.scss
+++ b/assets/scss/components/_app-section.scss
@@ -1,6 +1,5 @@
 .section {
   margin-bottom: 12rem;
-  padding: 2rem;
 
   &--light-bg {
     background-color: white;
